# ChangeLog for www-apps/froxlor
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*froxlor-0.9.10 (28 Jun 2010)

  28 Jun 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.9.ebuild, +froxlor-0.9.10.ebuild:
  version bump

*froxlor-0.9.9 (14 Jun 2010)

  14 Jun 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.8.ebuild, +froxlor-0.9.9.ebuild:
  version bump

  10 Jun 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.8.ebuild, froxlor-9999.ebuild:
  added USE-flag ftpquota to enable/disable quota in proftpd

  09 Jun 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.8.ebuild, froxlor-9999.ebuild:
  some fixes in pkg_config phase

*froxlor-0.9.8 (31 May 2010)

  31 May 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.7.ebuild, +froxlor-0.9.8.ebuild:
  version bump, remove old

  28 May 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-9999.ebuild:
  tweak php 5.3 depends, depend on virtual/mysql instead of dev-db/mysql

*froxlor-0.9.7 (17 May 2010)

  17 May 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.6.ebuild, +froxlor-0.9.7.ebuild:
  version bump, remove old

*froxlor-0.9.6 (03 May 2010)

  03 May 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.5.ebuild, +froxlor-0.9.6.ebuild:
  version bump, remove old

*froxlor-0.9.5 (19 Apr 2010)

  19 Apr 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.4.ebuild, +froxlor-0.9.5.ebuild:
  version bump, remove old

  16 Apr 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-9999.ebuild:
  support PHP 5.3, this is considered WIP until it hits the portage tree

  11 Apr 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.4.ebuild, froxlor-9999.ebuild:
  fixup bind permissions, bug 135

  10 Apr 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.4.ebuild, froxlor-9999.ebuild: